--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
     "env": {
         "UUID": {
             "description": "V2Ray UUID",
-            "value": "ad806487-2d26-4636-98b6-ab85pp8521f7"
+            "value": "trojan-admin"
         }
     },
     "website": "https://ibcl.us/Heroku-V2Ray_20191014/",
